--- a/package.json
+++ b/package.json
@@ -31,9 +31,15 @@
   },
   "homepage": "https://github.com/audiojs/audio-format",
   "dependencies": {
+    "is-audio-buffer": "^1.0.11",
+    "is-buffer": "^1.1.5",
+    "is-plain-obj": "^1.1.0",
     "sample-rate": "^2.0.0"
   },
   "devDependencies": {
+    "audio-buffer": "^4.0.1",
+    "ndarray": "^1.0.18",
+    "ndsamples": "^1.0.0",
     "tape": "^4.6.3"
   }
 }
