--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/audiojs/audio-format",
   "dependencies": {
+    "defined": "^1.0.0",
     "is-audio-buffer": "^1.0.11",
     "is-buffer": "^1.1.5",
     "is-plain-obj": "^1.1.0",
