--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
     "web-audio",
     "waa"
   ],
-  "author": "Dima Yv <dfcreative@gmail.com>",
+  "author": "Dmitry Yvanov <dfcreative@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/audiojs/audio-format/issues"
   },
   "homepage": "https://github.com/audiojs/audio-format",
   "dependencies": {
-    "defined": "^1.0.0",
     "is-audio-buffer": "^1.0.11",
     "is-buffer": "^1.1.5",
     "is-plain-obj": "^1.1.0",
+    "pick-by-alias": "^1.2.0",
     "sample-rate": "^2.0.0"
   },
   "devDependencies": {
